--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-markdown": "^9.0.0",
-    "@google/generative-ai": "^0.21.0",
-    "react-server-dom-webpack": "19.0.0",
-    "react-server-dom-parcel": "19.0.0"
+    "@google/generative-ai": "^0.21.0"
   },
   "devDependencies": {
     "@types/node": "^20",
