--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "next": "15.1.9",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-markdown": "^9.0.0",
-    "@google/generative-ai": "^0.21.0"
+    "react-markdown": "^9.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
